--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,37 @@
-*{
+* {
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+}
+
+:root{
+    --plant-type-color: #14A06F
+}
+
+.content {
+    padding: 1rem;
+
+}
+
+ol.pokemons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+ol.pokemons li {
+    display: flex;
+    flex-direction: column;
+    margin: 0.5rem;
+    padding: 1.5rem 1rem;
+    background-color: var(--plant-type-color);
+    color: aliceblue;
+    border-radius: 7px;
+}
+
+ol.pokemons li img{
+    max-width: 100%;
+    height: 100px;
+    align-self: flex-end;
 }
