--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,23 +3,139 @@
     box-sizing: border-box;
 }
 
-:root {
-    --plant-type-color: #49d0b0;
-    --plant-type-color-detail: #61e1ca;
-    /* --plant-type-color-detail: #1d5346; */
-    --text-details: #ebeaea;
-}
 
 body{
     background-color: #f6f8fc;
 }
 
 .content {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     padding: 1rem;
     background-color: #ececec;
 }
+
+.esconder{
+    display: none; 
+}
+
+.details{
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+}
+
+.box{
+    width: 100%;
+    max-width: 380px;
+    background-color: #ececec;
+    align-self: center;
+}
+
+.imageBackgroundDetail {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    height: 180px;
+    max-height: 450px;
+    
+    background-image: url('../icons/pokeball.svg');
+    background-repeat: no-repeat;
+    background-position: 25% 25%;
+    background-size: 50%; 
+}
+
+.imageDetail {
+    display: flex;
+    justify-content: flex-end;
+    width: auto;
+    max-width: 150px;
+    position: absolute;
+    bottom: -20px;
+}
+
+.headerDetails{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.headerDetails h3 {
+    font-size: 1.5rem;
+    margin: 0.5rem 0;
+}
+
+.detailsContent{
+    padding: 1rem;
+}
+
+.attribute{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.attributesDetails {
+    margin-top: 1rem;
+    width: 100%;
+}
+
+.detailsContent .types{
+    padding: 0;
+    margin: 0.25rem;
+}
+
+.typesDetail{
+    display: flex;
+    padding: 0;
+    margin: 0rem;
+}
+
+.typeDetail{
+    width: 44px;
+    margin: 0.25rem;
+    border-radius: 1rem;
+    padding: 0.25rem;
+    font-size: 0.625rem;
+    text-align: center;
+}
+
+.attribute span{
+    font-size: .825rem;
+}
+
+
+.attributeBarContainer{
+    display: flex;
+    align-items: center;
+}
+
+.attributeBarBase {
+    width: 200px;
+    height: 8px;
+    background-color: #686767;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.attributeBar {
+    display: block;
+    height:100%;
+    width: 0%;
+    align-self: center;
+    transition: width 0.5s ease;
+}
+
+.attributeNumber{
+    font-size: 1rem;
+    margin-right: .5rem;
+}
+
+.capitalize{
+    text-transform: capitalize;
+}
+
 
 @media screen and (min-width: 992px) {
     .content {
@@ -28,4 +144,5 @@ body{
         margin: 1rem auto;
         border-radius: 1rem;
     }
+
 }
