--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -4,36 +4,28 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
+    gap: 1rem;
 }
 
-@media screen and (min-width: 380px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr;
-    }
-}
-@media screen and (min-width: 576px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
-@media screen and (min-width: 992px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
-}
 
 .pokemon {
     display: flex;
     flex-direction: column;
-    margin: 0.5rem;
-    padding: 1.5rem 1rem;
-    background-color: var(--plant-type-color);
+    width: 100%;
     color: aliceblue;
     border-radius: 7px;
 }
 
+.pokemon:hover {
+    cursor: pointer;
+    filter: contrast(0.9);
+    filter: brightness(1.1);
+}
+
 .pokemon .name {
     margin: .25rem 0;
+    font-size: 1.2rem;
+    text-transform: capitalize;
 }
 
 .pokemon .number {
@@ -59,17 +51,84 @@
 }
 
 .pokemon .detail .types .type {
-    background-color: var(--plant-type-color-detail);
+    min-width: 48px;
     color: #fff;
     padding: 0.25rem 0.5rem;
     margin: .5rem;
-    font-size: .625rem;
+    font-size: .75rem;
     border-radius: 1rem;
     text-align: center;
+    filter: contrast(1.2);
+    filter: brightness(1.1);
+    text-align: center;
+    text-transform: capitalize;
 }
 
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
     align-self: flex-end;
+}
+
+.btnPokemon {
+    background-color:#00000000;
+    border: none;
+}
+
+.pokemonCardHeader{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+}
+
+.pagination button {
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+    color: #fff;
+    padding: 0.25rem 0.50rem;
+    margin: .25rem 0;
+    font-size: 0.825rem;
+}
+
+.pagination button:hover {
+    background-color: #606cc4;
+    cursor: pointer;
+}
+
+.topDetails{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.topDetails img {
+    cursor: pointer;
+}
+
+@media screen and (min-width: 380px) {
+    .pokemons {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 576px) {
+    .pokemons {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .pokemons {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
